# celatim

./: .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmeasure/: Makefile  header_facts.c
data/: mechanisms.jsonl
docs/: file-transfer-implementation-checklist.md  file-transfer-operations.md  file-transfer-roadmap-audit.md  file-transfer-validation-20260710.md  release-0.2.1.md  release-0.2.10.md  release-0.2.11.md  release-0.2.2.md  release-0.2.3.md  release-0.2.4.md  release-0.2.5.md  release-0.2.6.md  release-0.2.7.md  release-0.2.8.md  release-0.2.9.md  testbed.md  transfer-compatibility-policy.md
docs/adr/: 0001-transfer-security.md  0002-transfer-state-and-acknowledgements.md
examples/: evidence-run-http2-ping-opaque.json
experiments/: Dockerfile  LOG.md  TEST-EVIDENCE.md  detector_population_campaign.py  lab.py  native_marquee.py  native_marquee_campaign.py  run.py  run_battery.py  run_detect.py  run_firewall.py  run_mbox.py  run_nat.py  run_negatives.py  run_realistic_dns.py  run_subliminal.py  run_subliminal_rsa.py  run_taps.py  run_timing.py
experiments/crosshost/: Dockerfile.alicebob  SUMMARY.json  alice_bob_runner.py  applayer-results.json  crosshost_applayer.py  crosshost_harness.py  crosshost_msg.py  fix_crosshost_endpoint_labels.py  packet-family-results.json  sniff6.py
scenarios/: http2-ping-opaque.toml  quic-connection-id.toml  rtp-rtcp-ext-app.toml  z-http3-reserved-settings-aioquic.toml  z-tcp-reserved-bits-afpacket.toml  zzz-dns-txt-dnspython.toml
scenarios/subliminal-ctrl/: zzz-ecdsa-nonce-128ctrl.toml
schemas/: carrier-endpoint-v1.schema.json  detector-replay-v1.schema.json  detector-trace-manifest-v1.schema.json  doctor-v1.schema.json  evidence-run-v1.schema.json  pcap-decode-v1.schema.json  provider-conformance-v1.schema.json  provider-manifest-v1.schema.json  reviewer-bundle-verify-v1.schema.json  scenario-execution-plan-v1.schema.json  scenario-inventory-v1.schema.json  scenario-v1.schema.json  support-matrix-v1.schema.json  timing-sweep-v1.schema.json  transfer-listener-status-v1.schema.json  transfer-manifest-v1.schema.json  transfer-offer-v1.schema.json
scripts/: installed_wheel_smoke.py
src/celatim/: __init__.py  adapter.py  api.py  catalog.py  cli.py  cli_endpoints.py  crypto_transcript.py  discovery.py  doctor.py  envelope.py  errors.py  evidence.py  evidence_index.py  inspection.py  model.py  observer.py  scenario.py  (+6 more)
tests/: test_adapter.py  test_adapter_scapy.py  test_binary_payload_roundtrip.py  test_bitfield.py  test_catalog.py  test_channel.py  test_channel_bits.py  test_cli_session.py  test_codec.py  test_crosshost_evidence.py  test_crosshost_metrics.py  test_crypto_transcript.py  test_dataset.py  test_detect.py  test_detector_metrics.py  test_detector_population_campaign.py  test_detector_rule_artifacts.py  test_doctor.py  test_envelope.py  test_evidence.py  test_evidence_index.py  test_evidence_schema.py  test_experiment_lab.py  test_format_carriers.py  test_framer.py  test_http2_fields.py  test_http2_pdu.py  test_layout_ground_truth.py  test_minimal_pdu.py  test_model.py  test_native_marquee.py  test_observer.py  test_protocol_rates.py  test_public_api.py  test_quic_fields.py  test_quic_pdu.py  test_registry.py  test_report_figures.py  test_report_tables.py  test_resources.py  (+42 more)
tests/fixtures/provider_package/: pyproject.toml
tests/fixtures/provider_package/src/celatim_fixture_provider/: __init__.py
(+133 files in other folders)
