[project]
name = "celatim"
version = "0.2.7"
description = "Typed secure file transfer and reproducible covert-channel measurement for IETF protocol fields."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Michael Bommarito", email = "michael.bommarito@gmail.com" }
]
requires-python = ">=3.14"
keywords = [
    "covert-channels",
    "network-measurement",
    "network-protocols",
    "privacy",
    "steganography",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mjbommar/celatim"
Issues = "https://github.com/mjbommar/celatim/issues"
Repository = "https://github.com/mjbommar/celatim.git"

[project.optional-dependencies]
transfer = [
    "cryptography>=46.0.3",
]
packet = [
    "scapy>=2.6.1",
]
crypto = [
    "cryptography>=46.0.3",
]
daemon = [
    "aioquic>=1.3.0",
    "h2>=4.3.0",
]
dns = [
    "dnspython>=2.8.0",
]
ssh = [
    "paramiko>=3.5.0",
]
iot = [
    "aiocoap>=0.4.12",
    "paho-mqtt>=2.1.0",
]
realtime = [
    "websockets>=13.0",
]

[project.scripts]
celatim = "celatim.cli:main"
celatim-paper-figures = "celatim.cli:paper_figures_main"
celatim-paper-macros = "celatim.cli:paper_macros_main"
celatim-paper-tables = "celatim.cli:paper_tables_main"
celatim-support-matrix = "celatim.cli:support_matrix_main"

[dependency-groups]
dev = [
    "aiocoap>=0.4.12",
    "aioquic>=1.3.0",
    "cryptography>=46.0.3",
    "dnspython>=2.8.0",
    "h2>=4.3.0",
    "paramiko>=3.5.0",
    "paho-mqtt>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.4",
    "scapy>=2.6.1",
    "ty>=0.0.19",
    "websockets>=13.0",
]
packet = [
    "scapy>=2.6.1",
]
crypto = [
    "cryptography>=46.0.3",
]
daemon = [
    "aioquic>=1.3.0",
    "h2>=4.3.0",
]
dns = [
    "dnspython>=2.8.0",
]
ssh = [
    "paramiko>=3.5.0",
]
iot = [
    "aiocoap>=0.4.12",
    "paho-mqtt>=2.1.0",
]
realtime = [
    "websockets>=13.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["celatim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-config --strict-markers"
xfail_strict = true

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
# UP042: (str, Enum) is deliberate for explicit `.value` semantics and stable
# str(); E501: line length enforced by `ruff format`; RUF002/RUF003: docstrings
# and comments intentionally use academic Unicode (en dash, mu, approx, times).
ignore = ["UP042", "E501", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["celatim"]

[tool.ty.environment]
python-version = "3.14"
